--- a/assessment-vue/src/assets/style/imports/_shared-rules.scss
+++ b/assessment-vue/src/assets/style/imports/_shared-rules.scss
@@ -17,7 +17,7 @@ main {
 }
 
 nav {
-	z-index: 10;
+	z-index: 100;
 	position: sticky;
 	margin: 0;
 	top: 0;
@@ -26,14 +26,13 @@ nav {
 	overflow-y: hidden;
 	white-space: nowrap;
 	font-size: 14px;
-	height: 48px;
 	a {
 		text-transform: uppercase;
 		color: $color-text-black;
 		display: inline-block;
 		vertical-align: middle;
 		text-align: center;
-		line-height: 45px;
+		line-height: 48px;
 		border-bottom: 3px solid transparent;
 		font-size: 14px;
 		transition: color 0.2s;
@@ -114,17 +113,23 @@ button {
 	top: 10px;
 	left: 10px;
 	width: fit-content;
+	z-index: 10;
 }
 
 .image {
 	aspect-ratio: 1/1;
+	overflow: hidden;
 	img {
+		transition: transform .2s;
 		display: block;
 		top: 0;
 		//margin: 10px auto;
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
+		&:hover {
+			transform: scale(1.1);
+		}
 	}
 }
 
@@ -146,7 +151,23 @@ button {
 	width: min-content;
 }
 
+.product-information {
+	h1 {
+		margin-bottom: 20px;
+	}
+}
+
+#navbar-products-list {
+	padding-bottom: 16px;
+	clip-path: inset(0 0 16px 0);
+	height: 64px;
+	.navItem {
+		line-height: 45px;
+	}
+}
+
 #navbar-product-details {
+	height: 48px;
 	#shopping-cart {
 		position: absolute;
 	}
@@ -210,12 +231,6 @@ button {
 	}
 }
 
-.product-information {
-	h1 {
-		margin-bottom: 20px;
-	}
-}
-
 #btnAddToCart {
 	color: $color-text-white;
 	background-color: $background-color-navbar-mobile;
@@ -227,7 +242,7 @@ button {
 	position: relative;
 	max-width: 100%;
 	align-content: center;
-	margin: 16px;
+	margin: 0 16px;
 	display: grid;
 	column-gap: 15px;
 	row-gap: 20px;
